--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -32,7 +32,7 @@ twitter_username: jekyllrb
 github_username:  ConstantinRuhdorfer
 
 # Build settings
-theme: minima
+theme: hyde
 plugins:
   - jekyll-feed
 
