Remote theme added

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -32,7 +32,7 @@ twitter_username: jekyllrb
 github_username:  ConstantinRuhdorfer
 
 # Build settings
-theme: hyde
+remote_theme: hydecorp/hydejack
 plugins:
   - jekyll-feed
 
