--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ highlighter: rouge
 
 # Permalinks
 permalink:        pretty
-relative_permalinks: true
+# relative_permalinks: true
 
 # Setup
 title:            Hyde
@@ -15,7 +15,7 @@ baseurl:          /
 
 author:
   name:           'Constantin Ruhdorfer'
-  url:            https://twitter.com/mdo
+  url:            https://www.perceptualui.org/people/ruhdorfer/
 
 paginate:         5
 
