--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:        pretty
 # Setup
 title:            Hyde
 tagline:          'A Jekyll theme'
-description:      'I am Constantin Ruhdorfer, a Ph.D. scholar at the International Max Planck Research School for Intelligent Systems (IMPRS-IS) and the HCI-CS group at the University of Stuttgart, Germany. I work to improve human-AI cooperation by investigating the intersection of Machine Theory of Mind and Multi-Agent Reinforcement Learning.'
+description:      'Hi, I am a Ph.D. scholar at the IMPRS-IS and the HCI-CS group at the University of Stuttgart, Germany. I work to improve human-AI cooperation by investigating the intersection of Machine Theory of Mind and Multi-Agent Reinforcement Learning.'
 url:              https://constantinruhdorfer.github.io/
 baseurl:          /
 
