--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ permalink:        pretty
 # relative_permalinks: true
 
 # Setup
-title:            Hyde
-tagline:          'A Jekyll theme'
+title:            Constantin Ruhdorfer
+tagline:          'Ph.D. student in Human-AI Cooperation'
 description:      'Hi, I am a Ph.D. scholar at the IMPRS-IS and the HCI-CS group at the University of Stuttgart, Germany. I work to improve human-AI cooperation by investigating the intersection of Machine Theory of Mind and Multi-Agent Reinforcement Learning.'
 url:              https://constantinruhdorfer.github.io/
 baseurl:          /
